gcc/testsuite/gfortran.dg/gacc/vector_length-double_xfail.f95
! { dg-do compile } 
! { dg-options "-fopenacc -fdump-tree-original" } 

program test
	implicit none
	integer i
	integer :: x1 = 3, a1(10)

!$acc parallel vector_length (1.5) ! { dg-error "requires a scalar INTEGER expression" }
	do i = 1,10
		x1 = x1 + 1
		a1(i) = x1
	end do
!$acc end parallel

end program test